src/qt/cbor/libqcborvalue.bf

public struct QCborValueRef : QCborValueConstRef
{
	[LinkName("QCborValueRef_new")]
	public static extern QCborValueRef* QCborValueRef_new(QCborValueRef* other);
	[LinkName("QCborValueRef_new2")]
	public static extern QCborValueRef* QCborValueRef_new2(QCborValueRef* other);
	[LinkName("QCborValueRef_new3")]
	public static extern QCborValueRef* QCborValueRef_new3(QCborValueRef* param1);
	[LinkName("QCborValueRef_OperatorAssign")]
	public static extern void QCborValueRef_OperatorAssign(Self* c_this, QCborValue* other);
	[LinkName("QCborValueRef_OperatorAssignWithOther")]
	public static extern void QCborValueRef_OperatorAssignWithOther(Self* c_this, QCborValueRef* other);
	[LinkName("QCborValueRef_OperatorSubscript")]
	public static extern QCborValueRef QCborValueRef_OperatorSubscript(Self* c_this, int64 key);
	[LinkName("QCborValueRef_OperatorSubscript2")]
	public static extern QCborValueRef QCborValueRef_OperatorSubscript2(Self* c_this, libqt_string key);
	[LinkName("QCborValueRef_ToQCborValue")]
	public static extern QCborValue QCborValueRef_ToQCborValue(Self* c_this);
	[LinkName("QCborValueRef_Type")]
	public static extern int64 QCborValueRef_Type(Self* c_this);
	[LinkName("QCborValueRef_IsInteger")]
	public static extern bool QCborValueRef_IsInteger(Self* c_this);
	[LinkName("QCborValueRef_IsByteArray")]
	public static extern bool QCborValueRef_IsByteArray(Self* c_this);
	[LinkName("QCborValueRef_IsString")]
	public static extern bool QCborValueRef_IsString(Self* c_this);
	[LinkName("QCborValueRef_IsArray")]
	public static extern bool QCborValueRef_IsArray(Self* c_this);
	[LinkName("QCborValueRef_IsMap")]
	public static extern bool QCborValueRef_IsMap(Self* c_this);
	[LinkName("QCborValueRef_IsTag")]
	public static extern bool QCborValueRef_IsTag(Self* c_this);
	[LinkName("QCborValueRef_IsFalse")]
	public static extern bool QCborValueRef_IsFalse(Self* c_this);
	[LinkName("QCborValueRef_IsTrue")]
	public static extern bool QCborValueRef_IsTrue(Self* c_this);
	[LinkName("QCborValueRef_IsBool")]
	public static extern bool QCborValueRef_IsBool(Self* c_this);
	[LinkName("QCborValueRef_IsNull")]
	public static extern bool QCborValueRef_IsNull(Self* c_this);
	[LinkName("QCborValueRef_IsUndefined")]
	public static extern bool QCborValueRef_IsUndefined(Self* c_this);
	[LinkName("QCborValueRef_IsDouble")]
	public static extern bool QCborValueRef_IsDouble(Self* c_this);
	[LinkName("QCborValueRef_IsDateTime")]
	public static extern bool QCborValueRef_IsDateTime(Self* c_this);
	[LinkName("QCborValueRef_IsUrl")]
	public static extern bool QCborValueRef_IsUrl(Self* c_this);
	[LinkName("QCborValueRef_IsRegularExpression")]
	public static extern bool QCborValueRef_IsRegularExpression(Self* c_this);
	[LinkName("QCborValueRef_IsUuid")]
	public static extern bool QCborValueRef_IsUuid(Self* c_this);
	[LinkName("QCborValueRef_IsInvalid")]
	public static extern bool QCborValueRef_IsInvalid(Self* c_this);
	[LinkName("QCborValueRef_IsContainer")]
	public static extern bool QCborValueRef_IsContainer(Self* c_this);
	[LinkName("QCborValueRef_IsSimpleType")]
	public static extern bool QCborValueRef_IsSimpleType(Self* c_this);
	[LinkName("QCborValueRef_IsSimpleTypeWithSt")]
	public static extern bool QCborValueRef_IsSimpleTypeWithSt(Self* c_this, void st);
	[LinkName("QCborValueRef_ToSimpleType")]
	public static extern void QCborValueRef_ToSimpleType(Self* c_this);
	[LinkName("QCborValueRef_Tag")]
	public static extern void QCborValueRef_Tag(Self* c_this);
	[LinkName("QCborValueRef_TaggedValue")]
	public static extern QCborValue QCborValueRef_TaggedValue(Self* c_this);
	[LinkName("QCborValueRef_ToInteger")]
	public static extern int64 QCborValueRef_ToInteger(Self* c_this);
	[LinkName("QCborValueRef_ToBool")]
	public static extern bool QCborValueRef_ToBool(Self* c_this);
	[LinkName("QCborValueRef_ToDouble")]
	public static extern double QCborValueRef_ToDouble(Self* c_this);
	[LinkName("QCborValueRef_ToByteArray")]
	public static extern libqt_string QCborValueRef_ToByteArray(Self* c_this);
	[LinkName("QCborValueRef_ToString")]
	public static extern libqt_string QCborValueRef_ToString(Self* c_this);
	[LinkName("QCborValueRef_ToDateTime")]
	public static extern QDateTime QCborValueRef_ToDateTime(Self* c_this);
	[LinkName("QCborValueRef_ToUrl")]
	public static extern QUrl QCborValueRef_ToUrl(Self* c_this);
	[LinkName("QCborValueRef_ToRegularExpression")]
	public static extern QRegularExpression QCborValueRef_ToRegularExpression(Self* c_this);
	[LinkName("QCborValueRef_ToUuid")]
	public static extern QUuid QCborValueRef_ToUuid(Self* c_this);
	[LinkName("QCborValueRef_ToArray")]
	public static extern QCborArray QCborValueRef_ToArray(Self* c_this);
	[LinkName("QCborValueRef_ToArrayWithQCborArray")]
	public static extern QCborArray QCborValueRef_ToArrayWithQCborArray(Self* c_this, QCborArray* a);
	[LinkName("QCborValueRef_ToMap")]
	public static extern QCborMap QCborValueRef_ToMap(Self* c_this);
	[LinkName("QCborValueRef_ToMapWithQCborMap")]
	public static extern QCborMap QCborValueRef_ToMapWithQCborMap(Self* c_this, QCborMap* m);
	[LinkName("QCborValueRef_OperatorSubscript3")]
	public static extern QCborValue QCborValueRef_OperatorSubscript3(Self* c_this, libqt_string key);
	[LinkName("QCborValueRef_OperatorSubscript5")]
	public static extern QCborValue QCborValueRef_OperatorSubscript5(Self* c_this, int64 key);
	[LinkName("QCborValueRef_Compare")]
	public static extern int32 QCborValueRef_Compare(Self* c_this, QCborValue* other);
	[LinkName("QCborValueRef_OperatorEqual")]
	public static extern bool QCborValueRef_OperatorEqual(Self* c_this, QCborValue* other);
	[LinkName("QCborValueRef_OperatorNotEqual")]
	public static extern bool QCborValueRef_OperatorNotEqual(Self* c_this, QCborValue* other);
	[LinkName("QCborValueRef_OperatorLesser")]
	public static extern bool QCborValueRef_OperatorLesser(Self* c_this, QCborValue* other);
	[LinkName("QCborValueRef_ToVariant")]
	public static extern QVariant QCborValueRef_ToVariant(Self* c_this);
	[LinkName("QCborValueRef_ToJsonValue")]
	public static extern QJsonValue QCborValueRef_ToJsonValue(Self* c_this);
	[LinkName("QCborValueRef_ToCbor")]
	public static extern libqt_string QCborValueRef_ToCbor(Self* c_this);
	[LinkName("QCborValueRef_ToCborWithWriter")]
	public static extern void QCborValueRef_ToCborWithWriter(Self* c_this, QCborStreamWriter* writer);
	[LinkName("QCborValueRef_ToDiagnosticNotation")]
	public static extern libqt_string QCborValueRef_ToDiagnosticNotation(Self* c_this);
	[LinkName("QCborValueRef_ToSimpleType1")]
	public static extern void QCborValueRef_ToSimpleType1(Self* c_this, void defaultValue);
	[LinkName("QCborValueRef_Tag1")]
	public static extern void QCborValueRef_Tag1(Self* c_this, void defaultValue);
	[LinkName("QCborValueRef_TaggedValue1")]
	public static extern QCborValue QCborValueRef_TaggedValue1(Self* c_this, QCborValue* defaultValue);
	[LinkName("QCborValueRef_ToInteger1")]
	public static extern int64 QCborValueRef_ToInteger1(Self* c_this, int64 defaultValue);
	[LinkName("QCborValueRef_ToBool1")]
	public static extern bool QCborValueRef_ToBool1(Self* c_this, bool defaultValue);
	[LinkName("QCborValueRef_ToDouble1")]
	public static extern double QCborValueRef_ToDouble1(Self* c_this, double defaultValue);
	[LinkName("QCborValueRef_ToByteArray1")]
	public static extern libqt_string QCborValueRef_ToByteArray1(Self* c_this, libqt_string defaultValue);
	[LinkName("QCborValueRef_ToString1")]
	public static extern libqt_string QCborValueRef_ToString1(Self* c_this, libqt_string defaultValue);
	[LinkName("QCborValueRef_ToDateTime1")]
	public static extern QDateTime QCborValueRef_ToDateTime1(Self* c_this, QDateTime* defaultValue);
	[LinkName("QCborValueRef_ToUrl1")]
	public static extern QUrl QCborValueRef_ToUrl1(Self* c_this, QUrl* defaultValue);
	[LinkName("QCborValueRef_ToRegularExpression1")]
	public static extern QRegularExpression QCborValueRef_ToRegularExpression1(Self* c_this, QRegularExpression* defaultValue);
	[LinkName("QCborValueRef_ToUuid1")]
	public static extern QUuid QCborValueRef_ToUuid1(Self* c_this, QUuid* defaultValue);
	[LinkName("QCborValueRef_ToCbor1")]
	public static extern libqt_string QCborValueRef_ToCbor1(Self* c_this, int64 opt);
	[LinkName("QCborValueRef_ToCbor2")]
	public static extern void QCborValueRef_ToCbor2(Self* c_this, QCborStreamWriter* writer, int64 opt);
	[LinkName("QCborValueRef_ToDiagnosticNotation1")]
	public static extern libqt_string QCborValueRef_ToDiagnosticNotation1(Self* c_this, int64 opt);
}